--- a/J-Cartoons.html
+++ b/J-Cartoons.html
@@ -218,6 +218,12 @@
             <figcaption class="figure-caption">Temporadas</figcaption>
             <figcaption class="figure-caption">01 a la 05 + Pelicula</figcaption>
           </figure>
+           <figure class="figure">
+            <img src="img/cartoons/2015-Escandalosos.jpg" class="figure-img rounded" alt="..."  width="200" height="300">
+            <figcaption class="figure-caption">Ensandalosos</figcaption>
+            <figcaption class="figure-caption">Temporadas</figcaption>
+            <figcaption class="figure-caption">01 a la 04</figcaption>
+          </figure>
           <figure class="figure">
             <img src="img/cartoons/2018-(Des)encanto.jpg" class="figure-img rounded" alt="..."  width="200" height="300">
             <figcaption class="figure-caption">(Des)encanto</figcaption>
