--- a/Sagas Terror.html
+++ b/Sagas Terror.html
@@ -125,7 +125,7 @@
 </div>
 
 <div class="text-center">
-	<div><h1>Alien</h1></div>
+	<div><h1>Alien (Orden Cronologico)</h1></div>
 	<figure class="figure">
 		<img src="img/terror/Alien 1-Prometheus.jpg" class="figure-img rounded"  width="200" height="300">
 		<figcaption class="figure-caption">Prometheus</figcaption>
@@ -226,7 +226,7 @@
 </div>
 
 <div class="text-center">
-	<div><h1>Destino Final</h1></div>
+	<div><h1>Final Destination</h1></div>
 	<figure class="figure">
 		<img src="img/terror/Final Destination 1.jpg" class="figure-img rounded"  width="200" height="300">
 		<figcaption class="figure-caption">Destino Final 1</figcaption>
@@ -252,7 +252,7 @@
 </div>
 
 <div class="text-center">
-	<div><h1>Viernes 13</h1></div>
+	<div><h1>Friday the 13th</h1></div>
 	<figure class="figure">
 		<img src="img/terror/Friday the 13th 1.jpg" class="figure-img rounded"  width="200" height="300">
 		<figcaption class="figure-caption">Viernes 13</figcaption>
@@ -358,6 +358,92 @@
 </div>
 
 <div class="text-center">
+	<div><h1>HELLRAISER</h1></div>
+	<figure class="figure">
+		<img src="img/terror/Hellraiser 1.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Hellraiser 1</figcaption>
+		<figcaption class="figure-caption">...</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Hellraiser 2 Camino al infierno.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Hellraiser 2</figcaption>
+	<figcaption class="figure-caption">Camino al infierno</figcaption>
+	</figure>
+	<figure class="figure">
+		<img src="img/terror/Hellraiser 3 Puerta al Infierno.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Hellraiser 3</figcaption>
+		<figcaption class="figure-caption">Puerta al Infierno</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Hellraiser 4 El Final de la Dinastía Sangrienta.jpg" class="figure-img rounded"  width="200" height="300">
+    	<figcaption class="figure-caption">Hellraiser 4</figcaption>
+		<figcaption class="figure-caption">El Final de la Dinastía Sangrienta</figcaption>
+	</figure>
+</div>
+<div class="text-center">
+<figure class="figure">
+	<img src="img/terror/Hellraiser 5 Infierno.jpg" class="figure-img rounded"  width="200" height="300">
+	<figcaption class="figure-caption">Hellraiser 5</figcaption>
+	<figcaption class="figure-caption">Infierno</figcaption>	
+	</figure>	
+<figure class="figure">
+	<img src="img/terror/Hellraiser 6 Hellseeker.jpg" class="figure-img rounded"  width="200" height="300">
+	<figcaption class="figure-caption">Hellraiser 6</figcaption>
+	<figcaption class="figure-caption">Hellseeker</figcaption>	
+	</figure>
+<figure class="figure">
+	<img src="img/terror/Hellraiser 7 Deader.jpg" class="figure-img rounded"  width="200" height="300">
+	<figcaption class="figure-caption">Hellraiser 7</figcaption>
+	<figcaption class="figure-caption">Deader</figcaption>
+	</figure>	
+<figure class="figure">
+	<img src="img/terror/Hellraiser 8 Hellworld.jpg" class="figure-img rounded"  width="200" height="300">
+	<figcaption class="figure-caption">Hellraiser 8</figcaption>
+	<figcaption class="figure-caption">Hellworld</figcaption>	
+	</figure>
+</div>
+<div class="text-center">
+	<figure class="figure">
+	<img src="img/terror/Hellraiser 9 Revelations.jpg" class="figure-img rounded"  width="200" height="300">
+	<figcaption class="figure-caption">Hellraiser 9</figcaption>
+	<figcaption class="figure-caption">Revelations</figcaption>
+</figure>
+</div>
+
+<div class="text-center">
+<div><h1>HOSTEL</h1></div>
+<figure class="figure">
+	<img src="img/terror/Hostel 1.jpg" class="figure-img rounded"  width="200" height="300">
+	<figcaption class="figure-caption">Hostel 1</figcaption>
+</figure>	
+<figure class="figure">
+	<img src="img/terror/Hostel 2.jpg" class="figure-img rounded"  width="200" height="300">
+<figcaption class="figure-caption">Hostel 2</figcaption>
+</figure>
+<figure class="figure">
+	<img src="img/terror/Hostel 3.jpg" class="figure-img rounded"  width="200" height="300">
+	<figcaption class="figure-caption">Hostel 3</figcaption>
+</figure>	
+</div>
+</div>
+
+<div class="text-center">
+<div><h1>It (Eso)</h1></div>
+<figure class="figure">
+	<img src="img/terror/It (Eso) 1.jpg" class="figure-img rounded"  width="200" height="300">
+	<figcaption class="figure-caption">It (Eso)</figcaption>
+</figure>	
+<figure class="figure">
+	<img src="img/terror/It (Eso) Chapter 1.jpg" class="figure-img rounded"  width="200" height="300">
+<figcaption class="figure-caption">It (Eso) Chapter 1</figcaption>
+</figure>
+<figure class="figure">
+	<img src="img/terror/It (Eso) Chapter 2.jpg" class="figure-img rounded"  width="200" height="300">
+	<figcaption class="figure-caption">It (Eso) Chapter 2</figcaption>
+</figure>	
+</div>
+
+<div class="text-center">
 	<div><h1>La Calle del Terror</h1></div>
 	<figure class="figure">
 		<img src="img/terror/La calle del terror (Parte 1) 1994.jpg" class="figure-img rounded"  width="200" height="300">
@@ -374,6 +460,158 @@
     <figcaption class="figure-caption">La Calle del Terror Part 3</figcaption>
     <figcaption class="figure-caption">1666</figcaption>
 	</figure>
+</div>
+
+<div class="text-center">
+	<div><h1>La Tiendita del Horror + Remake</h1></div>
+	<figure class="figure">
+		<img src="img/terror/La Tiendita del Horror 1.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">La Tiendita del Horror</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/La Tiendita del Horror(Remake).jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">La Tiendita del Horror(Remake)</figcaption>
+	</figure>
+</div>
+
+<div class="text-center">
+	<div><h1>Leprechaun (Orden Cronologico)</h1></div>
+	<figure class="figure">
+		<img src="img/terror/Leprechaun 1 El origen.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Leprechaun </figcaption>
+		<figcaption class="figure-caption">El Origen</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Leprechaun 2(Movie 1).jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Leprechaun 1</figcaption>
+	<figcaption class="figure-caption">...</figcaption>
+	</figure>
+	<figure class="figure">
+		<img src="img/terror/Leprechaun 3 Returns.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Leprechaun </figcaption>
+		<figcaption class="figure-caption">El Retorno</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Leprechaun 4(Movie 2).jpg" class="figure-img rounded"  width="200" height="300">
+    	<figcaption class="figure-caption">Leprechaun 2</figcaption>
+		<figcaption class="figure-caption">...</figcaption>
+	</figure>
+</div>
+<div class="text-center">
+		<figure class="figure">
+		<img src="img/terror/Leprechaun 5 in the Hood.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Leprechaun</figcaption>
+		<figcaption class="figure-caption">En el Barrio</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Leprechaun 6 Back 2 tha Hood.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Leprechaun</figcaption>
+	<figcaption class="figure-caption">De Nuevo en el Barrio</figcaption>
+	</figure>
+	<figure class="figure">
+		<img src="img/terror/Leprechaun 7(Movie 3).jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Leprechaun 3</figcaption>
+		<figcaption class="figure-caption">...</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Leprechaun 8 In Space(Movie 4).jpg" class="figure-img rounded"  width="200" height="300">
+    	<figcaption class="figure-caption">Leprechaun 4</figcaption>
+		<figcaption class="figure-caption">En el Espacio</figcaption>
+	</figure>
+</div>
+
+<div class="text-center">
+	<div><h1>Of The Dead (Orden Cronologico No Oficial)</h1></div>
+	<figure class="figure">
+		<img src="img/terror/Of the Dead-1-1968-Night of the Living Dead.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">1968-Night of the Living Dead</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Of the Dead-2-2007-Diary of the Dead.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">2007-Diary of the Dead</figcaption>
+	</figure>
+	<figure class="figure">
+		<img src="img/terror/Of the Dead-3-2009-Survival of the Dead.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">2009-Survival of the Dead</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Of the Dead-4-1978-Dawn of the Dead.jpg" class="figure-img rounded"  width="200" height="300">
+    	<figcaption class="figure-caption">1978-Dawn of the Dead.</figcaption>
+	</figure>
+</div>
+<div class="text-center">
+		<figure class="figure">
+		<img src="img/terror/Of the Dead-5-1985-Day of the Dead.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">1985-Day of the Dead</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Of the Dead-6-2005-Land of the Dead.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">2005-Land of the Dead</figcaption>
+	</figure>
+	<figure class="figure">
+		<img src="img/terror/Of the Dead-7-2004-Dawn of the Dead(Remake).jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">2004-Dawn of the Dead(Remake)</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Of the Dead-8-2021-Army of the Dead.jpg" class="figure-img rounded"  width="200" height="300">
+    	<figcaption class="figure-caption">2021-Army of the Dead.</figcaption>
+	</figure>
+</div>
+
+<div class="text-center">
+	<div><h1>Return of the Living Dead</h1></div>
+	<figure class="figure">
+		<img src="img/terror/Of The Living Dead 1.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Return of the Living Dead 1</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Of The Living Dead 2.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Return of the Living Dead 2</figcaption>
+	</figure>
+	<figure class="figure">
+		<img src="img/terror/Of The Living Dead 3.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Return of the Living Dead 3</figcaption>
+	</figure>	
+</div>
+
+<div class="text-center">
+	<div><h1>Phantasm</h1></div>
+	<figure class="figure">
+		<img src="img/terror/Phantasm 1.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Phantasm 1</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Phantasm 2.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Phantasm 2</figcaption>
+	</figure>
+	<figure class="figure">
+		<img src="img/terror/Phantasm 3 Lord of the Dead.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Phantasm 3: Lord of the Dead</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Phantasm 4 Oblivion.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Phantasm 4: Oblivion</figcaption>
+	</figure>
+	<figure class="figure">
+		<img src="img/terror/Phantasm 5 Ravager.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Phantasm 5: Ravager</figcaption>
+	</figure>	
+</div>
+
+<div class="text-center">
+	<div><h1>Phantasm</h1></div>
+	<figure class="figure">
+		<img src="img/terror/Poltergeist 1.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Phantasm 1</figcaption>
+	</figure>	
+	<figure class="figure">
+		<img src="img/terror/Poltergeist 2 El otro lado.jpg" class="figure-img rounded"  width="200" height="300">
+    <figcaption class="figure-caption">Poltergeist 2: El otro lado</figcaption>
+	</figure>
+	<figure class="figure">
+		<img src="img/terror/Poltergeist 3.jpg" class="figure-img rounded"  width="200" height="300">
+		<figcaption class="figure-caption">Phantasm 3 Lord of the Dead</figcaption>
+	</figure>		
 </div>
 
 <div class="btn-whatsapp">
