--- a/Sagas Comedia.html
+++ b/Sagas Comedia.html
@@ -24,6 +24,7 @@
     </div>
 </div>
 
+  <div class="listback">
 
  <div class="list">
     <h1>
@@ -31,7 +32,7 @@
 		</h1>
 	</div>
 	<div class="navgen">
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs btn btn-warning">
 	<li class="nav-item">
 	  <a class="nav-link" aria-current="page" href="index.html">Peliculas</a>
 	</li>
@@ -59,12 +60,6 @@
   </li>
   </ul>
 </div>
-
-<div class="listback">
-		<div class="Movies">
-			<div Class="list">
-				<h1></h1>
-			</div>
 
 <div class="text-center">
 	<div><h1>3 Ninjas</h1></div>
