--- a/Sagas Fantasia.html
+++ b/Sagas Fantasia.html
@@ -24,6 +24,7 @@
     </div>
 </div>
 
+  <div class="listback">
 
 <div class="list">
     <h1>
@@ -31,7 +32,7 @@
 		</h1>
 	</div>
 <div class="navgen">
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs btn btn-warning">
 	<li class="nav-item">
 	  <a class="nav-link" aria-current="page" href="index.html">Peliculas</a>
 	</li>
@@ -60,7 +61,6 @@
   </ul>
 </div>
 
-<div class="listback">
 <div class="text-center">
   <div><h1>El señor de los anillos Version Extendida</h1></div>
   <figure class="figure">
