--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
     </div>
     </div>
 <div>
-   <h1 class="list">
+  <div class="listback">
+    <div class="list">
+      <h1>
      Estrenos 2021
    </h1>
 </div>
@@ -87,13 +89,15 @@
 </div>
 </div>
 <div>
-   <h1 class="list">
+
+ <div class="list">
+   <h1>
      CATALOGO
    </h1>
  </div>
 
 <div class="navgen">
-<ul class="nav nav-tabs">
+  <ul class="nav nav-tabs btn btn-warning">
   <li class="nav-item">
     <a class="nav-link e" aria-current="page" href="index.html">Peliculas</a>
   </li>
@@ -122,7 +126,6 @@
 </ul>
 </div>
 
-  <div class="listback">
   <div class="Movies">
           <div class="text-center">
           <figure class="figure">
@@ -365,6 +368,7 @@
 </div>
 </div>
 
+</div>
 <div class="btn-whatsapp">
 <a href="https://api.whatsapp.com/send?phone=+542291517207" target="_blank">
 <img src="http://s2.accesoperu.com/logos/btn_whatsapp.png" alt="">
