--- a/J-Series.html
+++ b/J-Series.html
@@ -24,13 +24,14 @@
     </div>
 </div>
 
+  <div class="listback">
 
  <div class="list">
    <h1 >
   Series
    </h1>
    <div class="navgen">
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs btn btn-warning">
 	<li class="nav-item">
 	  <a class="nav-link" aria-current="page" href="index.html">Peliculas</a>
 	</li>
