--- a/Sagas Terror.html
+++ b/Sagas Terror.html
@@ -24,14 +24,15 @@
     </div>
 </div>
 
+ <div class="listback">
 
  <div class="list">
     <h1>
 	Terror(en construccion)
-		</h1>
+	</h1>
 	</div>
 	<div class="navgen">
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs btn btn-warning">
 	<li class="nav-item">
 	  <a class="nav-link" aria-current="page" href="index.html">Peliculas</a>
 	</li>
@@ -59,8 +60,6 @@
   </li>
   </ul>
 </div>
-
-<div class="listback">
 		<div class="Movies">
 			<div Class="list">
 				<h1></h1>
