--- a/J-Anime+Live Actions.html
+++ b/J-Anime+Live Actions.html
@@ -25,11 +25,12 @@
 </div>
 
 <div>
+	<div class="listback">
    <h1 class="list">
      Estrenos 2021
    </h1>
 </div>
-   <div class="listback">
+   
  <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="10000">
@@ -84,7 +85,7 @@
   </div>
   </div>
 
- <div class="listback list">
+ <div class="list">
 <h1>
 ANIME
 </h1>
