--- a/J-Anime+Live Actions.html
+++ b/J-Anime+Live Actions.html
@@ -131,7 +131,7 @@ ANIME
 <div class="text-center">
 	<figure class="figure">
 		<img src="img/Anime/Akira.jpg" class="figure-img rounded" title="Akira" alt="Akira" width="200" height="300">
-		<figcaption class="figure-caption">Akira</figcaption>
+		<figcaption class="figure-caption color">Akira</figcaption>
 	</figure>
 	<figure class="figure">
 		<img src="img/Anime/Angel Beats.jpg" class="figure-img rounded" alt="..." width="200" height="300">
